learned about css sprites and how to use them

--- a/Images/CSSSprites/index.html
+++ b/Images/CSSSprites/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
+    <!-- <img src="images/dishes.png" alt="">
+    <img src="images/landing.png" alt="">
+    <img src="images/rocketship.png" alt="">
+    <img src="images/saturn.png" alt="">
+    <img src="images/ufo.png" alt=""> -->
 
+    <!-- * this class is going to show this part of the background from the combine image -->
+    <span class="bg-dishes"></span>
+    <span class="bg-landing"></span>
+    <span class="bg-rocketship"></span>
+    <span class="bg-saturn"></span>
+    <span class="bg-ufo"></span>
 </body>
 
 </html>
