--- a/Forms/CSSFrameworks/index.html
+++ b/Forms/CSSFrameworks/index.html
@@ -7,22 +7,29 @@
     <title> Creating Basic Forms </title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+
+    <!-- * cdn for bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <form>
-        <div class="form-group">
-            <label for="name">name</label>
-            <input id="name" type="text">
+    <form class="w-50">
+        <div class="mb-3">
+            <label class="form-label" for="name">name</label>
+            <input class="form-control" id="name" type="text">
         </div>
 
-        <div class="form-group">
-            <label for="email">name</label>
-            <input id="email" type="email">
+        <div class="mb-3">
+            <label class="form-label" for="email">name</label>
+            <input class="form-control" id="email" type="email">
         </div>
 
-        <button type="submit">register</button>
-        <button type="reset">clear</button>
+        <button class="btn btn-primary" type="submit">register</button>
+        <button class="btn btn-secondary" type="reset">clear</button>
     </form>
 </body>
 
