--- a/Forms/CSSFrameworks/index.html
+++ b/Forms/CSSFrameworks/index.html
@@ -7,6 +7,8 @@
     <title> Creating Basic Forms </title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <!-- * cdn for milligram -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 
     <!-- * cdn for bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,19 +19,19 @@
 </head>
 
 <body>
-    <form class="w-50">
-        <div class="mb-3">
-            <label class="form-label" for="name">name</label>
-            <input class="form-control" id="name" type="text">
+    <form>
+        <div>
+            <label for="name">name</label>
+            <input id="name" type="text">
         </div>
 
-        <div class="mb-3">
-            <label class="form-label" for="email">name</label>
-            <input class="form-control" id="email" type="email">
+        <div>
+            <label for="email">name</label>
+            <input id="email" type="email">
         </div>
 
-        <button class="btn btn-primary" type="submit">register</button>
-        <button class="btn btn-secondary" type="reset">clear</button>
+        <button type="submit">register</button>
+        <button type="reset">clear</button>
     </form>
 </body>
 
