--- a/Forms/TextFields/index.html
+++ b/Forms/TextFields/index.html
@@ -4,32 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Creating Basic Forms </title>
+    <title> Text Fields </title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-
-    <!-- * cdn for bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 </head>
 
 <body>
-    <form class="w-50">
-        <div class="mb-3">
-            <label class="form-label" for="name">name</label>
-            <input class="form-control" id="name" type="text">
-        </div>
-
-        <div class="mb-3">
-            <label class="form-label" for="email">name</label>
-            <input class="form-control" id="email" type="email">
-        </div>
-
-        <button class="btn btn-primary" type="submit">register</button>
-        <button class="btn btn-secondary" type="reset">clear</button>
+    <form>
+        <input type="text" name="" id="" value="max">
+        <input type="number" name="" id="">
+        <input type="password" name="" id="">
+        <input type="date" name="" id="">
+        <input type="email" name="" id="" placeholder="email">
+        <textarea cols="30" rows="10"> I do not have a value attribute...</textarea>
     </form>
 </body>
 
