--- a/Forms/DataValidation/index.html
+++ b/Forms/DataValidation/index.html
@@ -16,7 +16,7 @@
         <!-- * "minlength" is a attribute that makes this field require at least 3 characters -->
         <!-- * "maxlength" is a attribute that makes this field require at least 10 characters -->
         <input type="text" required minlength="3" maxlength="10">
-        <input type="text" required min="0" max="10">
+        <input type="number" required min="0" max="10">
         <button type="submit">Submit</button>
     </form>
 </body>
