--- a/Forms/TextFields/index.html
+++ b/Forms/TextFields/index.html
@@ -14,7 +14,8 @@
     <form>
         <input type="text" name="" id="" value="max">
         <input type="number" name="" id="">
-        <input type="password" name="" id="">
+        <!-- * this boolean attribute will make this field focus when we load the page -->
+        <input type="password" name="" id="" autofocus>
         <input type="date" name="" id="">
         <input type="email" name="" id="" placeholder="email">
         <textarea cols="30" rows="10"> I do not have a value attribute...</textarea>
