--- a/WCMC/Object-orientedCSS/index.html
+++ b/WCMC/Object-orientedCSS/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-
+    <header class="hero"><button class="btn btn-primary">Sign up</button></header>
+    <!-- * we are going to use aside element for the sidebar -->
+    <aside class="side-bar"><button class="btn btn-secondary">contact</button></aside>
 </body>
 
 </html>
