--- a/WCMC/BEM/index.html
+++ b/WCMC/BEM/index.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
-
+    <!-- * the -- is used to seperate a block from a modifier -->
+    <div class="card card--popular">
+        <!-- * this is the BEM naming convention in action -->
+        <header class="card__hearder">
+            <span class="card__price"></span>
+        </header>
+        <div class="card__body">
+            <button class="btn"></button>
+        </div>
+    </div>
 </body>
 
 </html>
